@@ -51,12 +51,7 @@ git config --global user.email "$BOT_EMAIL";
 git commit -am "release: ${RELEASE_VERSION}"
 git tag -a ${RELEASE_VERSION} -m "release ${RELEASE_VERSION}"
 
-mvn \
-  --add-opens=java.base/java.util=ALL-UNNAMED \
-  --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
-  --add-opens=java.base/java.text=ALL-UNNAMED \
-  --add-opens=java.desktop/java.awt.font=ALL-UNNAMED \
-  clean deploy -Pdigiexpress-release \
+mvn clean deploy -Pdigiexpress-release \
   --settings digiexpress-build-parent/ci-maven-settings.xml \
   -B -Dmaven.javadoc.skip=false \
   -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
